--- a/app/src/main/res/layout/egg_hunt_fragment.xml
+++ b/app/src/main/res/layout/egg_hunt_fragment.xml
@@ -6,9 +6,15 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.andraganoid.egghunt2.EggHuntViewModel" />
+
+        <variable
+            name="sharedViewModel"
+            type="com.andraganoid.egghunt2.SharedViewModel" />
 
         <variable
             name="clicker"
@@ -42,13 +48,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <Button
             android:id="@+id/putButton"
             style="@style/buttonStyle"
             android:layout_marginStart="24dp"
             android:layout_marginBottom="12dp"
+            android:onClick="@{v->viewModel.hideEgg(sharedViewModel._currentPosition)}"
             android:text="@string/put_egg"
+            android:visibility="@{viewModel.isSearchMode()?View.GONE:View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -58,16 +65,18 @@
             android:layout_marginStart="24dp"
             android:layout_marginBottom="12dp"
             android:text="@string/cancel_hunt"
-            android:visibility="gone"
+            android:visibility="@{viewModel.isSearchMode()?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/donrButton"
+            android:id="@+id/doneButton"
             style="@style/buttonStyle"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="12dp"
-            android:text="@string/done_hunting"
+            android:text="@string/done_hiding"
+            android:visibility="@{viewModel.isSearchMode()?View.GONE:View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -76,12 +85,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="Eggs to find: "
+            android:text="@{@string/eggs_counter+' '+viewModel.eggsCounter}"
             android:textColor="@color/buttonColor"
             android:textSize="24sp"
             android:textStyle="normal|bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
+        <!--        <TextView-->
+        <!--            android:id="@+id/txt"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:textColor="#FFF"-->
+        <!--            android:textSize="20sp"-->
+        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/eggCount" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
