--- a/app/src/main/res/layout/egg_hunt_fragment.xml
+++ b/app/src/main/res/layout/egg_hunt_fragment.xml
@@ -10,15 +10,12 @@
 
         <variable
             name="viewModel"
-            type="com.andraganoid.egghunt2.EggHuntViewModel" />
+            type="com.andraganoid.egghunt2.hunt.EggHuntViewModel" />
 
         <variable
             name="sharedViewModel"
             type="com.andraganoid.egghunt2.SharedViewModel" />
 
-        <variable
-            name="clicker"
-            type="com.andraganoid.egghunt2.EggHuntFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +23,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".EggHuntFragment">
+        tools:context=".hunt.EggHuntFragment">
 
         <com.otaliastudios.cameraview.CameraView
             android:id="@+id/camera"
@@ -42,7 +39,9 @@
             android:id="@+id/eggImg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{v->viewModel.eggClicked()}"
             android:src="@drawable/egg"
+            android:visibility="@{viewModel.eggVisibility?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +54,7 @@
             android:layout_marginBottom="12dp"
             android:onClick="@{v->viewModel.hideEgg(sharedViewModel._currentPosition)}"
             android:text="@string/put_egg"
-            android:visibility="@{viewModel.isSearchMode()?View.GONE:View.VISIBLE}"
+            android:visibility="@{viewModel.isSearchMode?View.GONE:View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -64,8 +63,9 @@
             style="@style/buttonStyle"
             android:layout_marginStart="24dp"
             android:layout_marginBottom="12dp"
-            android:text="@string/cancel_hunt"
-            android:visibility="@{viewModel.isSearchMode()?View.VISIBLE:View.GONE}"
+            android:onClick="@{v->viewModel.huntInit()}"
+            android:text="@{viewModel.eggsCounter!=0?@string/cancel_hunt:@string/play_again}"
+            android:visibility="@{viewModel.isSearchMode?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -75,8 +75,9 @@
             style="@style/buttonStyle"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="12dp"
+            android:onClick="@{v->viewModel.doneHiding()}"
             android:text="@string/done_hiding"
-            android:visibility="@{viewModel.isSearchMode()?View.GONE:View.VISIBLE}"
+            android:visibility="@{viewModel.isSearchMode?View.GONE:View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -92,15 +93,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-        <!--        <TextView-->
-        <!--            android:id="@+id/txt"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:textColor="#FFF"-->
-        <!--            android:textSize="20sp"-->
-        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/eggCount" />-->
+        <TextView
+            android:id="@+id/gameOver"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:gravity="center"
+            android:text="@string/game_over"
+            android:textColor="@color/buttonColor"
+            android:textSize="36sp"
+            android:textStyle="normal|bold"
+            android:visibility="@{viewModel.gameOver?View.VISIBLE:View.GONE}"
+            app:layout_constraintTop_toBottomOf="@id/eggImg" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
